# TemDataBrowser

./: README.md  __init__.py  pyproject.toml  run.py  run_TemDataBrowser.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
TemDataBrowser/: __init__.py
ncem_browser/: __init__.py
